--- a/public/index.css
+++ b/public/index.css
@@ -12,7 +12,7 @@ body {
   max-height: 10%;
   min-height: 40px;
   background-color: #222222;
-  color: white;
+  color: cornsilk;
   display: flex;
   align-items: center;
   justify-content: space-between;
