fonts and nav buttons styled

--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Duru+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
 
 body {
     font-family: "Raleway", Arial, sans-serif;
@@ -24,29 +25,43 @@ body {
     background-color:#778367;
     color: #002447;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     padding-right: 10px;
     padding-left: 10px;
-    max-height: 10rem;
+    max-height: 20rem;
 }
 
 #site-name {
-    font-family: 'Duru Sans', sans-serif;
+    font-family: 'Cinzel', serif;
+    color: #652913;
     font-size: 30px;
+    margin: 0px;
+}
+
+.always-buttons {
+    display: flex;
 }
 
 
 .button-div {
     display: flex;
     justify-content: space-evenly;
+    align-items: baseline;
+
 }
 .nav-link, button {
-  padding: 1rem;
-  margin: 1rem;
   background-color:#778367;
+  text-decoration: none;
+  font-family: 'Cinzel', serif;
+  font-weight: bold;
+  font-size: 15px;
+  margin: 0rem .5rem 0rem .5rem;
+  min-width: 10rem;
   border: none;
-  text-decoration: underline;
+  padding-bottom: 1rem;
+  
 }
 
 .post-page {
@@ -74,6 +89,17 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly
+}
+
+.message-buttons {
+display: flex;
+justify-content: center;
+}
+
+.message-buttons button {
+    padding: 1rem;
+    border-radius: 5px;
+    text-decoration: none;
 
 }
 #post-header {
@@ -118,25 +144,36 @@ body {
     border: 1px solid black;
     border-radius: 5px;
     margin: 5px;
-    padding-left: 10px;
-    background-color:  #e7e6d2c7
+    padding: 1rem;
+    width: 20rem;
+    background-color:  #e7e6d2c7;
+
 }
 
 .dashboard-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    max-height: 100vh;
-    overflow-y: scroll;
+    column-gap: 1rem;
+
+   
     margin-right: 3rem;
     margin-left: 3rem;
     
 }
 
 .user-dashboard {
-    margin-top: 0;
-    background-image: url("things.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    /* max-height: 100vh;
-    overflow-y: scroll; */
+
 }
+
+.user-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:  #e7e6d2c7;
+    margin-top: 2rem;
+    border-radius: 5px;
+    max-height: 70vh;
+    overflow-y: scroll;
+    min-width: 25rem;
+}
+
