--- a/public/index.css
+++ b/public/index.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap');
 
+
 body {
+    margin: 0;
     font-family: "Raleway", Arial, sans-serif;
     height: 100vh;
-    width: 100vw;
-    margin: 0;
     display: flex;
     background-color: #778367;
     flex-direction: column;
     background-image: url("things.jpg");
-    background-size: cover;
+    background-size:cover;
     background-repeat: no-repeat;
-
+    overflow-y: scroll;
 
 }
 
@@ -20,25 +20,17 @@ body {
 
 #navbar {
     font-family: 'Josefin Slab', serif;
-    flex-grow: 1;
-    max-height: 10%;
-    min-height: 40px;
     background-color:#778367;
-    color: #002447;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding-right: 10px;
-    padding-left: 10px;
-    /* max-height: 20rem; */
 }
 
 #site-name {
     font-family: 'Cinzel', serif;
     color: #652913;
     font-size: 30px;
-    margin: 0px;
+    text-align: center;
 
 }
 
@@ -49,32 +41,29 @@ body {
 
 .button-div {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: baseline;
 
 }
-.nav-link, button {
+ button, #login{
   background-color:#778367;
   text-decoration: none;
   font-family: 'Josefin Slab', serif;
   font-weight: bold;
   font-size: 20px;
   margin: 0rem .5rem 0rem .5rem;
-  min-width: 8rem;
   border: none;
   padding-bottom: 1rem;
   
 }
 
-.post-page {
-    background-image: url("things.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    max-height: 100vh;
+ .post-page {
+    height: 70vh;
     overflow-y: scroll;
+
     font-family: 'Josefin Slab', serif;
 
-}
+} 
 .search {
   display: flex;
   align-content: center;
@@ -114,7 +103,8 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly
+    justify-content: space-evenly;
+
 }
 
 .message-buttons {
@@ -132,6 +122,7 @@ justify-content: center;
 
 .message-form input {
     font-family: 'Josefin Slab', serif;
+    margin: 2px;
 }
 #post-header {
     display: flex;
@@ -141,8 +132,10 @@ justify-content: center;
 .single-post {
     border: 1px solid black;
     border-radius: 5px;
-    width: 20rem;
-    height: 20rem;
+    min-width: 20rem;
+    min-height: 20rem;
+    max-width: 20rem;
+    max-height: 20rem;
     padding: 1rem;
     overflow: scroll;
     margin-bottom: 1rem;
@@ -169,6 +162,11 @@ justify-content: center;
     justify-content: center;
 }
 
+.reg {
+    display: flex;
+    justify-content: center;
+}
+
 .PostForm {
     margin-top: 5rem;
     padding: 10px;
@@ -181,7 +179,7 @@ justify-content: center;
     width: 50rem;
 }
 
-#post-button, #edit-button {
+#post-button, #edit-button, #reg-button {
     background-color:#778367;
     text-decoration: none;
     font-family: 'Josefin Slab', serif;
@@ -191,7 +189,21 @@ justify-content: center;
     min-width: 8rem;
     border: none;
     padding: 1rem;
+    border-radius: 5px;
 
+}
+
+#message-button {
+    background-color:#778367; 
+}
+
+#reg-button:hover, #edit-button:hover, #post-button:hover, .message-buttons button:hover {
+    background-color:#6529137f;
+    cursor: pointer;
+}
+
+.nav-link:hover, button {
+    cursor: pointer;
 }
 
 
@@ -212,12 +224,8 @@ justify-content: center;
 }
 
 .dashboard-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 1rem;   
-    margin-right: 3rem;
-    margin-left: 3rem;
-    
+    display: flex;
+    justify-content: center;   
 }
 
 
@@ -229,12 +237,50 @@ justify-content: center;
     background-color:  #e7e6d2c7;
     margin-top: 2rem;
     border-radius: 5px;
-    max-height: 90vh;
+    max-height: 70vh;
+    min-width: 30rem;
+    margin: 2rem;
     overflow-y: scroll;
-    min-width: 25rem;
 }
 
 .user-section h1 {
     font-family: 'Josefin Slab', serif;
+}
+
+/* Media Query: Tablet or Smaller */
+@media screen and (max-width: 1000px) {
+
+    body {
+        background-image: none;
+    }
+
+    .dashboard-content {
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       overflow-y: scroll;
+    } 
+
+     .home-page {
+
+        background-image: url("things.jpg");
+        background-size:contain;
+        background-repeat: no-repeat;
+        height: 100vh;
+    }
+
+    .login-form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #reg-form {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 90vw;
+    }
+
 }
 
